--- a/packages/graphic-walker/index.html
+++ b/packages/graphic-walker/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/kanaries.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Graphic Walker</title>
+    <meta name="description" content="A visual EDA app">
   </head>
   <body>
     <div id="root"></div>
