--- a/packages/graphic-walker/index.html
+++ b/packages/graphic-walker/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <div id="root"></div>
+    <!--
+      This is a demo template file which will not be included in the publish pack.
+      DO NOT INJECT THIS SCRIPT OR IMPORT @vercel/analytics IN ANY OTHER FILES!
+      @see https://vercel.com/docs/concepts/analytics/audiences/quickstart#add-the-%60analytics%60-component-to-your-app
+    -->
+    <script defer src="/_vercel/insights/script.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
