feat(dashboard): layout change

--- a/packages/graphic-walker/index.html
+++ b/packages/graphic-walker/index.html
@@ -7,8 +7,8 @@
     <title>Graphic Walker</title>
     <meta name="description" content="A visual EDA app">
   </head>
-  <body>
-    <div id="root"></div>
+  <body style="margin: 0;">
+    <div id="root" style="width: 100vw; height: 100vh;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
