chore: vercel analytic in buildapp

--- a/packages/graphic-walker/index.html
+++ b/packages/graphic-walker/index.html
@@ -5,16 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/kanaries.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Graphic Walker</title>
-    <meta name="description" content="A visual EDA app">
+    <meta name="description" content="An easy to use Exploratory Data Analysis tool">
   </head>
   <body>
     <div id="root"></div>
-    <!--
-      This is a demo template file which will not be included in the publish pack.
-      DO NOT INJECT THIS SCRIPT OR IMPORT @vercel/analytics IN ANY OTHER FILES!
-      @see https://vercel.com/docs/concepts/analytics/audiences/quickstart#add-the-%60analytics%60-component-to-your-app
-    -->
-    <script defer src="/_vercel/insights/script.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
