--- a/packages/playground/index.html
+++ b/packages/playground/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Graphic Walker</title>
     <meta name="description" content="Embeddable Exploratory Data Analysis Tool Designed by Kanaries">
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "lesdv3t1dr");
+    </script>
   </head>
   <body>
     <div id="root"></div>
