feat: dark mode & code format

--- a/packages/playground/gallery.html
+++ b/packages/playground/gallery.html
@@ -8,7 +8,7 @@
     <meta name="description" content="An easy to use Exploratory Data Analysis tool">
   </head>
   <body class="h-full">
-    <div id="root"></div>
+    <div id="root" class="h-full dark:bg-black"></div>
     <script type="module" src="/src/gallery/index.tsx"></script>
   </body>
 </html>
