chore: gallery page style

--- a/packages/graphic-walker/index.html
+++ b/packages/graphic-walker/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="An easy to use Exploratory Data Analysis tool">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="height: 100dvh; display: flex; flex-direction: column;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
