--- a/packages/playground/index.html
+++ b/packages/playground/index.html
@@ -15,7 +15,7 @@
     </script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="height: 100dvh; display: flex; flex-direction: column;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
